Trying to solve some image problem.
Sometimes images overlap with text, we don't want that...

--- a/css/gafanhoto.css
+++ b/css/gafanhoto.css
@@ -101,6 +101,7 @@ li { font-size: 1.2em; }
 }
 
 .Main h2 {
+    clear: both;
     font-size: 2em;
     margin-bottom: 5px;
 }
